--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,31 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.ul {
+  margin: 1rem;
+  padding: 1rem;
+  /* display: inline; */
+}
+.l {
+  padding: 1rem;
+  /* margin-right: 1rem; */
+  font-size: 1rem;
+  display: inline;
+  list-style: none;
+}
+
+#Next {
+  margin: 1rem;
+  padding: 1rem;
+  display: block;
+  align-content: center;
+}
+
+#Paid {
+  display: none;
+}
+
+#cashMsg {
+  display: none;
+}
